--- a/main.ipynb
+++ b/main.ipynb
@@ -1967,18 +1967,16 @@
     "            nn.ReLU(),\n",
     "        )\n",
     "\n",
-    "        # Global pooling → fixed-size output\n",
     "        self.global_pool = nn.AdaptiveMaxPool1d(1)\n",
     "\n",
     "        self.fc_out = nn.Linear(hidden_channels, output_size)\n",
     "        self.sigmoid = nn.Sigmoid()\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # x: (batch, embedding_dim)\n",
-    "        x = x.unsqueeze(1)              # → (batch, 1, embedding_dim)\n",
-    "        x = self.conv(x)                # → (batch, hidden_channels, L)\n",
-    "        x = self.global_pool(x)         # → (batch, hidden_channels, 1)\n",
-    "        x = x.squeeze(-1)               # → (batch, hidden_channels)\n",
+    "        x = x.unsqueeze(1)\n",
+    "        x = self.conv(x)\n",
+    "        x = self.global_pool(x)\n",
+    "        x = x.squeeze(-1)\n",
     "        x = self.fc_out(x)\n",
     "        return self.sigmoid(x)\n",
     "\n",
@@ -2053,17 +2051,14 @@
     "\t\ttrain_dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
     "\t\ttrain_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "\t\t\n",
-    "\t\t# Initialize the model\n",
     "\t\tinput_size = X_train.shape[1]\n",
     "\t\toutput_size = y_train_filtered.shape[1]\n",
     "\t\tmodel = MultiOutputCNN(input_size, output_size)\n",
     "\t\tmodel = model.to(device)\n",
     "\t\t\n",
-    "\t\t# Define loss function and optimizer\n",
-    "\t\tcriterion = nn.BCELoss()  # Use BCE loss for multi-label classification\n",
+    "\t\tcriterion = nn.BCELoss()\n",
     "\t\toptimizer = optim.Adam(model.parameters(), lr=lr)\n",
     "\n",
-    "\t\t# Training loop\n",
     "\t\tfor epoch in range(epochs):\n",
     "\t\t\tmodel.train()\n",
     "\t\t\tepoch_loss = 0.0\n",
@@ -2071,23 +2066,20 @@
     "\t\t\t\tfor batch_idx, (X_batch, y_batch) in enumerate(t):\n",
     "\t\t\t\t\toptimizer.zero_grad()\n",
     "\n",
-    "\t\t\t\t\t# Forward pass\n",
     "\t\t\t\t\ty_pred_train = model(X_batch)\n",
     "\n",
-    "\t\t\t\t\t# Compute loss\n",
     "\t\t\t\t\tloss = criterion(y_pred_train, y_batch)\n",
     "\t\t\t\t\tepoch_loss += loss.item()\n",
     "\n",
-    "\t\t\t\t\t# Backward pass and optimization\n",
     "\t\t\t\t\tloss.backward()\n",
     "\t\t\t\t\toptimizer.step()\n",
     "\n",
-    "\t\t\t\t\t# Update the tqdm progress bar with current loss\n",
     "\t\t\t\t\tt.set_postfix(loss=epoch_loss / (batch_idx + 1))\n",
     "\t\t\t\n",
     "\t\t\tavg_loss = epoch_loss / len(train_loader)\n",
     "\t\t\tprint(f\"Epoch [{epoch+1}/{epochs}], Loss: {avg_loss:.8f}\")\n",
     "\n",
+    "\t\t# not enough gpu ram to compute F1-score etc, gg\n",
     "\t\t# model.eval()\n",
     "\t\t# with torch.no_grad():\n",
     "\t\t# \ty_pred_val = model(X_val_tensor)\n",
@@ -2106,7 +2098,6 @@
     "\t\t\n",
     "\t\treturn model, (0, 0, 0), filtered_terms\n",
     "\t\t\n",
-    "\t# Train and evaluate\n",
     "\tclassifier, metrics, filtered_terms = train_safe_classifier(X_train, y_train.toarray(), terms)\n",
     "\t\t\n",
     "\treturn classifier, metrics, filtered_terms, X_train, y_train\n",
